--- a/package.json
+++ b/package.json
@@ -34,7 +34,12 @@
     "swagger-ui": "2.2.10",
     "tslib": "1.10.0",
     "webstomp-client": "1.2.6",
-    "zone.js": "0.10.2"
+    "zone.js": "0.10.2",
+    "@angular/animations": "latest",
+    "hammerjs": "latest",
+    "@angular/material": "latest",
+    "@angular/cdk": "latest",
+    "@angular/flex-layout": "latest"
   },
   "devDependencies": {
     "@angular/cli": "8.3.1",
